2013-12-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_api.php: fixed the get events filtered by group.
	
	MERGED FROM THE BRANCH PANDORA_4

2013-12-05  Dario Rodriguez <dario@artica.es>

	* mobile/operation/events.php: Fixed a bug loading events
	filtergin by group when a group has no events.

2013-12-05  Dario Rodriguez <dario@artica.es>

	* mobile/operation/networkmap.php: Fixed a bug width
	mobile network map.

2013-12-05  Dario Rodriguez <dario@artica.es>

	* mobile/operation/networkmaps.php: Fixed a wrong link
	on group icon from network map list.

2013-12-05  Dario Rodriguez <dario@artica.es>

	* mobile/include/style/main.css: Added CSS style for 
	"no data to show graph".	

2013-12-05  Dario Rodriguez <dario@artica.es>

	* mobile/operation/module_graph.php: Fixed a problem with
	module graph filter regarding to event and period filter.

2013-12-05  Dario Rodriguez <dario@artica.es>

	* mobile/operation/modules.php: Added default value for tag
	filter and added "All" option to modules group and tag filters

        * mobile/operation/modules.php: Fixed a style bug related to
        filter explanation update on module search on mobile console.

2013-12-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_api.php: fixed the get events when not found the
	agent, before it returned the systems events, now it returns empty
	list.
	
	MERGED FROM THE BRANCH PANDORA_4

2013-12-05  Dario Rodriguez <dario@artica.es>

	* mobile/operation/agents.php: Removed a filter option which 
	didn't work.

2013-12-03  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_treeview.php: Fixed sql error in tag tab.

	* ChangeLog: Fixed date in my previous commit.

2013-12-02  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_treeview.php: Fixed tree expansion failure
	by module.

2013-12-01 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_visual_map.php: fixed the old visual maps from