@@ -1,3 +1,15 @@
+2013-12-09  Sergio Martin <sergio.martin@artica.es>
+
+	* extras/pandoradb_migrate_4.1_to_5.0.postgreSQL.sql
+	extras/pandoradb_migrate_4.1_to_5.0.mysql.sql
+	extras/pandoradb_migrate_4.1_to_5.0.oracle.sql
+	extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql
+	extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql
+	extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql: Add to the 
+	migration scripts a query to set default theme when update 
+	from 4.x to 5 version. It prevents from ugly layouts due 
+	not supported themes. Incident #421
+
 2013-12-05 Miguel de Dios <miguel.dedios@artica.es>
 	
 	* include/functions_api.php: fixed the get events filtered by group.
